--- a/trunkfriends/project_updates.html
+++ b/trunkfriends/project_updates.html
@@ -44,8 +44,12 @@
                 </tr>
                 <tr>
                     <td class="large">
-                        <a href="install_deb.html">Debian & flavours (Ubuntu, etc.) installation files (deb
-                            package)</a>
+                        <a href="install_deb.html">Linux (x86) installation files (debian and generic)</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="large">
+                        <a href="install_source.html">Install from source (any system)</a>
                     </td>
                 </tr>
             </table>
