--- a/trunkfriends/install_osx.html
+++ b/trunkfriends/install_osx.html
@@ -65,6 +65,9 @@
                     <tr>
                         <td class="body">
                             <p></p>
+                            The installation for OSX has been tested on Intel and M2 chips, and should be
+                            architecture agnostic.
+                            <p></p>
                             For OSX, a packaged JAR file that can be executed directly as long as you have JAVA
                             installed, is so far what is provided. The reason for this is the difficulties of
                             building an install binary without registering as a developer with Apple. This is
