--- a/trunkfriends/project_updates.html
+++ b/trunkfriends/project_updates.html
@@ -66,20 +66,22 @@
                 <tr>
                     <td class="body">
                         <p>
-                            31/12-2023:
+                            7/1-2024:
                         </p>
                         <p>
                         <ul>
                             <li>
-                                A number of new features have been merged to main branch. If you have cloned Trunkfriends from git
-                                and run it from there, you can pull and get the features directly. If you run it from a downloaded
-                                zip file, you can simply replace it with a newly downloaded zip file.
+                                A number of new features were merged in just before end last year, but due to computers
+                                breaking down, I had no way to build release packages. This is now done. As the new
+                                features are not described in the documentation yet, please read these release notes
+                                to know what is there.
                             </li>
                             <li>
-                                Install file for Windows / Debian (and flavours like Ubuntu) will be packaged shortly.
-                                As an alternative to install files, JAR archives will be provided, offering the possibility
-                                to run Trunkfriends easily without installing anything, as long as you have Java installed.
-                                This will most likely give a way to run Trunkfriends on OSX without needing to run from source.
+                                You find install files for Debian (Ubuntu & other flavours), Windows as well as JAR packages
+                                for Windows, Linux (x86) and OSX (Intel & M series chips).
+                                In case anyone wonder, while JAR files generally are platform independent, the UI library that
+                                Trunkfriends use builds JAR files tailored for each OS, and will only work on the ones they are
+                                built for.
                             </li>
                             <li>
                                 Some new features, like unfollow / follow accounts and add accounts to list, require a
