Link to github & mastodon pages for Trunkfriends

--- a/trunkfriends/index.html
+++ b/trunkfriends/index.html
@@ -44,6 +44,17 @@
                             <a href="install_source.html">Install from source (any system)</a>
                         </td>
                     </tr>
+                    <tr>
+                        <td class="large">
+                            <a href="https://github.com/steinareliassen/trunkfriends">Tf@GitHub</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="large">
+                            <a href="https://mastodon.social/@trunkfriends">Tf@Mastodon</a>
+                        </td>
+                    </tr>
+
                 </table>
             </td>
             <td class="main">
@@ -51,7 +62,7 @@
                     <tr>
                         <td class="head">
                             <div align="center">
-                            Trunkfiends is a "friends management interface".
+                            Trunkfiends is a "friends management tool".
                             </div>
                         </td>
                     </tr>
