--- a/trunkfriends/project_updates.html
+++ b/trunkfriends/project_updates.html
@@ -52,6 +52,17 @@
                         <a href="install_source.html">Install from source (any system)</a>
                     </td>
                 </tr>
+                <tr>
+                    <td class="large">
+                        <a href="https://github.com/steinareliassen/trunkfriends">Tf@GitHub</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="large">
+                        <a href="https://mastodon.social/@trunkfriends">Tf@Mastodon</a>
+                    </td>
+                </tr>
+
             </table>
         </td> <!-- end side -->
         <td class="main">
