--- a/trunkfriends/install_osx.html
+++ b/trunkfriends/install_osx.html
@@ -51,6 +51,17 @@
                             <a href="install_source.html">Install from source (any system)</a>
                         </td>
                     </tr>
+                    <tr>
+                        <td class="large">
+                            <a href="https://github.com/steinareliassen/trunkfriends">Tf@GitHub</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="large">
+                            <a href="https://mastodon.social/@trunkfriends">Tf@Mastodon</a>
+                        </td>
+                    </tr>
+
                 </table>
             </td> <!-- end side -->
             <td class="main">
